--- a/src/Hph/View/back/partner.html.twig
+++ b/src/Hph/View/back/partner.html.twig
@@ -7,11 +7,11 @@
         <form method="POST" action="../../../../admin/admin.php?page=addPartner" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="url">Lien du partenaire</label>
-                <input type="text" class="form-control" id="url" name="url" placeholder="Entrez le lien du partenaire">
+                <input type="text" class="form-control" id="url" name="url" placeholder="Entrez le lien du partenaire" required>
             </div>
             <div class="form-group">
                 <label for="img">Photo du partenaire</label>
-                <input type="file" id="img" name="img">
+                <input type="file" id="img" name="img" required>
                 <p class="help-block">Aide à la photo</p>
             </div>
             <div class="text-center">
