--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -74,43 +74,23 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-3 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../../web/img/partner/adami.png" class="img-responsive">
-                    </a>
-                </div>
-                <div class="col-md-3 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../../web/img/partner/cnv.png" class="img-responsive">
-                    </a>
-                </div>
-                <div class="col-md-3 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../../web/img/partner/creditmut.png" class="img-responsive">
-                    </a>
-                </div>
-                <div class="col-md-3 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                    <a href="#" class="thumbnail thumbnail-div">
                         <img src="../../../../web/img/partner/loiret.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                    <a href="#" class="thumbnail thumbnail-div">
                         <img src="../../../../web/img/partner/orleans.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                    <a href="#" class="thumbnail thumbnail-div">
                         <img src="../../../../web/img/partner/region.png" class="img-responsive">
                     </a>
                 </div>
-                <div class="col-md-3 col-md-offset-0 col-xs-4  col-xs-offset-2">
-                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                <div class="col-md-3 col-xs-4">
+                    <a href="#" class="thumbnail thumbnail-div">
                         <img src="../../../../web/img/partner/sacem.png" class="img-responsive">
-                    </a>
-                </div>
-                <div class="col-md-3 col-md-offset-0 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../../web/img/partner/ecole.png" class="img-responsive" id="ecole-logo">
                     </a>
                 </div>
             </div>
@@ -124,7 +104,7 @@
         <i class="fa fa-youtube-square social-logo" aria-hidden="true"></i>
     </div>
     <div class="footer-last text-center">
-        <p class="footer-legal">Mentions Légales</p>
+        <p class="footer-legal">2017 © L'Astrolabe Orléans - Site Web crée par Sarah, Guillaume, Jason et Quentin de la Wild Code School Orléans</p>
     </div>
 </footer>
 <script src="../../../../web/js/jquery-3.1.1.min.js"></script>
