--- a/src/Hph/View/back/news.html.twig
+++ b/src/Hph/View/back/news.html.twig
@@ -28,7 +28,7 @@
             </div>
         </form>
         <br />
-        <h2 class="text-center">Liste des lieux</h2>
+        <h2 class="text-center">Liste des actualités</h2>
         <hr />
         <table class="table table-hover">
             <thead>
@@ -78,7 +78,7 @@
                                         <textarea class="form-control textarea" name="text" id="text" placeholder="Entrez le texte de l'actualité" rows="10" required>{{ news.text }}</textarea>
                                     </div>
                                     <div class="form-group">
-                                        <label for="img">Photo du lieu</label>
+                                        <label for="img">Photo de l'actualité</label>
                                         <input type="file" id="img" name="img" required>
                                         <p class="help-block">Aide à la photo</p>
                                     </div>
