page dynamique planning ok, sans ajout des showcases

--- a/src/Hph/View/front/planning.html.twig
+++ b/src/Hph/View/front/planning.html.twig
@@ -2,75 +2,62 @@
 {% block title %}Planning{% endblock %}
 {% block titleMobile %}Planning{% endblock %}
 {% block content %}
-   <div class="container text-center">
-       {% for i in range(15,16) %}
-           {% if i==15 %}
-               <h1 class="separator-title hidden-sm hidden-xs font-dokyo">VENDREDI</h1>
-           {% else %}
-               <h1 class="separator-title hidden-sm hidden-xs font-dokyo">SAMEDI</h1>
-           {% endif %}
-           <hr class="hr hidden-xs hidden-sm">
-           <br />
-            <div class="row">
-<<<<<<< HEAD:src/Hph/View/planning.html.twig
-            {% for place in place %}
-               <div class="col-md-2 hidden-sm hidden-xs">
-                   <h3 class="planning-location font-circula">{{ place.name }}</h3>
-               </div>
-=======
-                {% for i in range(0,5) %}
-                    <div class="col-md-2 hidden-sm hidden-xs">
-                        {% if i%2==0 %}
-                            {% for j in range(0,3) %}
-                                <div class="planning-show show-blue font-default"><p>CONCERT DE LA MORT QUI TUE<br/>18h-19h
-                                    </p></div><br/>
-                            {% endfor %}
-                        {% else %}
-                            {% for j in range(0,3) %}
-                                <div class="planning-show show-orange font-default"><p>CONCERT DE LA MORT QUI TUE<br/>18h-19h
-                                    </p></div><br/>
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-                {% endfor %}
-            </div>
-        {% endfor %}
-        <div class="row">
-            <div class="visible-xs visible-sm">
-                {% for m in range(0,1) %}
-                    <h1 class="separator-title">
-                        <a class="planning-link font-dokyo" data-toggle="collapse" href="#collapseVendredi{{ m }}"
-                           aria-expanded="false" aria-controls="collapseVendredi{{ m }}">JOUR</a>
-                    </h1>
-                    <br/>
-                    <hr class="hr-min">
-                    <div class="collapse planning-collapse" id="collapseVendredi{{ m }}">
-                        <div class="collapse-content">
-                            {% for n in range (0,5) %}
-                                <h3 class="planning-locationSmall font-dokyo">LIEU</h3>
-                                {% for o in range(0,3) %}
-                                    <p class="planning-showSmall font-circula">
-                                        <span class="turquoise font-circula bold">18h-19h : </span><br/> concert très long, mais vraiment, il est trèeeeeeeees long
-                                    </p>
-                                    <br/>
-                                {% endfor %}
-                            {% endfor %}
-                        </div>
-                    </div>
-                {% endfor %}
->>>>>>> 73cca48cbbf6d8615968d8eb8fc546837ed6bb28:src/Hph/View/front/planning.html.twig
-            </div>
-            <div class="row">
-               <div class="col-md-2 hidden-sm hidden-xs">
-                  {% for placeName in planning  %}
-                  <div class="planning-show show-blue font-default"><p>{{ planning.artistName }}<br/>
-                                   {{ planning.concertStart|date("h:i") }}-{{ planning.concertEnd|date("h:i") }}
-                  </div>
-               </div>
-                   {% endfor %}
-               {% endfor %}
-               </div>
+    <div class="container text-center">
+        {% for jourfr,progLieu in prog %}
+            <h1 class="separator-title hidden-sm hidden-xs font-dokyo">{{ jourfr }}</h1>
+            <hr class="hr hidden-xs hidden-sm">
+            <div class="row hidden-sm hidden-xs ">
+            {% for lieu, progHeure in progLieu %}
+                <div class="col-md-2 hidden-sm hidden-xs">
+                    <h3 class="planning-location font-circula">{{ lieu }}</h3>
+                </div>
+
             {% endfor %}
-       {% endfor %}
-   </div>
-{% endblock %}
+
+            </div>
+            <div class="row hidden-sm hidden-xs ">
+            {% for lieu, progHeure in progLieu %}
+
+                    <div class="col-md-2 hidden-sm hidden-xs col-lieu">
+
+                        {% for heure, artist in progHeure %}
+                            <div class=" hidden-sm hidden-xs">
+                                <div class="planning-show show-blue font-default "><p>{{ artist.name }}<br/>{{ heure }}
+                                    </p></div>
+                                <br/>
+                            </div>
+
+                        {% endfor %}
+                    </div>
+            {% endfor %}
+            </div>
+
+        {% endfor %}
+    <div class="row">
+        <div class="visible-xs visible-sm">
+            {% for jourfr,progLieu in prog %}
+                <h1 class="separator-title">
+                    <a class="planning-link font-dokyo" data-toggle="collapse" href="#collapse{{ jourfr }}"
+                       aria-expanded="false" aria-controls="collapseVendredi{{ jourfr }}">{{ jourfr }}</a>
+                </h1>
+                <hr class="hr-min">
+                <div class="collapse planning-collapse" id="collapse{{ jourfr }}">
+                    <div class="collapse-content">
+                        {% for lieu, progHeure in progLieu %}
+                            <h3 class="planning-locationSmall font-dokyo">{{ lieu|upper }}</h3>
+                            {% for heure, artist in progHeure %}
+                                <p class="planning-showSmall font-circula">
+                                    <span class="turquoise font-circula bold">{{ heure }} :</span><br/>{{ artist.name }}
+                                </p>
+                                <br/>
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
+
+        {% endblock %}
