--- a/web/css/style.css
+++ b/web/css/style.css
@@ -50,6 +50,7 @@ body {
     .separator-title {
         font-size: 11vw;
         color: white;
+        text-align: center;
     }
 }
 @media (min-width: 1110px) {
@@ -418,19 +419,13 @@ body {
     text-align: center;
     font-size: 18px;
     width: 280px;
-}
-.show-blue {
     padding-top: 3%;
     color: #004e57;
     border: 2px solid #2baf97;
     box-shadow: 3px 3px 0 #017553;
+
 }
-.show-orange {
-    padding-top: 3%;
-    color: #a54d1e;
-    border: 2px solid #ed7a21;
-    box-shadow: 3px 3px 0 #ed7a22;
-}
+
 .planning-showSmall {
     color: white;
     text-align: center;
@@ -468,6 +463,13 @@ body {
 .planning-link:focus {
     text-decoration: none;
     color: #ed7a21;
+}
+
+.col-lieu:nth-child(even) .planning-show {
+    padding-top: 3%;
+    color: #a54d1e;
+    border: 2px solid #ed7a21;
+    box-shadow: 3px 3px 0 #ed7a22;
 }
 /*Fin Planning*/
 
