--- a/src/Hph/View/front/benevolat.html.twig
+++ b/src/Hph/View/front/benevolat.html.twig
@@ -3,6 +3,10 @@
 <div class="container">
     <div class="row">
         <div class="benevolat-div">
+            <h1>BENEVOLES NOUS VOUS ATTENDONS...</h1>
+        <br>
+        <br>
+        <br>
             <p><strong>Pour quelques heures ou pour une vie, habile, jovial, dynamique, en vieux briscard de la bricole ou de la débrouille, prenez part à ce projet et apportez votre pierre à l&rsquo;édifice !</strong></p>
             <p><span style="text-decoration: underline;">Accessible à tous</span> : Devenez acteur du festival en participant à des missions simples et concrètes (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
             <p><span style="text-decoration: underline;">Convivial</span> : Seul(e) ou entre ami(e), c&rsquo;est un bon moyen de joindre l&rsquo;utile à l&rsquo;agréable.</p>
