update page volunteer

--- a/src/Hph/View/front/benevolat.html.twig
+++ b/src/Hph/View/front/benevolat.html.twig
@@ -2,8 +2,9 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="benevolat-div">
-            <h1>BENEVOLES NOUS VOUS ATTENDONS...</h1>
+        <h1>VOUS SOUHAITEZ AIDER À LA MISE EN PLACE DU FESTIVAL?.</h1>
+
+        <div class="benevolat-div text-center">
         <br>
         <br>
         <br>
@@ -33,7 +34,7 @@
             </ul>
             <p><strong><em>Démontage<br />
                     </em></strong></p>
-            <p>Dimanche 18 dès 14h au lundi 19 septembre</p>
+            <p>Dimanche 21 dès 14h au lundi 19 septembre</p>
         </div>
     </div>
 </div>
