--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -4,18 +4,25 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="benevolat-div">
+            <div class="benevolat-div ">
+                <h1>VOUS SOUHAITEZ AIDER À LA MISE EN PLACE DU FESTIVAL?</h1>
+                <br>
+                <br>
+                <br>
                 <p><strong>Pour quelques heures ou pour une vie, habile, jovial, dynamique, en vieux briscard de la bricole ou de la débrouille, prenez part à ce projet et apportez votre pierre à l&rsquo;édifice !</strong></p>
-                <p><span style="text-decoration: underline;">Accessible à tous</span> : Devenez acteur du festival en participant à des missions simples et concrètes (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
-                <p><span style="text-decoration: underline;">Convivial</span> : Seul(e) ou entre ami(e), c&rsquo;est un bon moyen de joindre l&rsquo;utile à l&rsquo;agréable.</p>
-                <p><span style="text-decoration: underline;">Faites votre demande</span> : remplissez le formulaire ci-dessous, toute demande incomplète ne pourra être traitée.</p>
-                <p><strong>Merci de ne vous inscrire qu&rsquo;une seule fois.</strong></p>
-                <p><em>En cas de forte affluence, nous ne garantissons pas de pouvoir répondre favorablement à toutes les demandes de bénévolat.</em></p>
+                <p>Accessible à tous : Devenez acteur du festival en participant à des missions simples et concrètes (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
+                <p>Convivial : Seul(e) ou entre ami(e), c&rsquo;est un bon moyen de joindre l&rsquo;utile à l&rsquo;agréable.</p>
+
+                <br>
+                <br>
                 <hr class="hr">
+                <br>
+
                 <h3><strong>Les grandes activités auxquelles vous pouvez participer :</strong></h3>
+                <br>
                 <p><em><strong>Atelier création d&rsquo;éléments de décoration</strong></em> et de signalétique: tous les ateliers auront lieu en début de soirée le mercredi 31 août, le jeudi 1er , le lundi 5 , le mercredi 7 et le jeudi 8 septembre.</p>
                 <p><strong><em>Le montage</em></strong></p>
-                <p>Pendant 5 jours, tout le monde s&rsquo;active pour faire prendre vie au festival du lundi 12 au vendredi 16 septembre 15h: montage des scènes, installation de la décoration, montage des bars, etc&#8230;</p>
+                <p>Pendant 5 jours, tout le monde s&rsquo;active pour faire prendre vie au festival du lundi 12 au vendredi 16 septembre 15h: montage des scènes, installation de la décoration, montage des bars</p>
                 <p><strong><em>Pendant le festival</em></strong></p>
                 <p>vendredi 16, 16h30 au samedi 17 septembre 2h</p>
                 <ul>
@@ -23,7 +30,7 @@
                     <li>Cashless: vous vendez et créditez les cartes de paiement pour les bars.</li>
                     <li>Contrôle billet: vous contrôlez la validité des billets à l&rsquo;entrée du site</li>
                     <li>Traducteur média: vous traduisez les interviews.</li>
-                    <li>Espace restauration: mise en place du buffet, réapprovisionnement des plats, vaisselle, etc&#8230;</li>
+                    <li>Espace restauration: mise en place du buffet, réapprovisionnement des plats, vaisselle, </li>
                     <li>Accueil artiste: vous prenez en charge l&rsquo;artiste de son arrivée et à son départ.</li>
                     <li>Green Team: vous sensibilisez le public au tri sélectif, vous gérez les déchets.</li>
                     <li>Photographe: vous photographiez les artistes, les concerts, les ambiances du festival</li>
@@ -31,8 +38,19 @@
                 </ul>
                 <p><strong><em>Démontage<br />
                         </em></strong></p>
-                <p>Dimanche 18 dès 14h au lundi 19 septembre</p>
+                <p>Dimanche 17 dès 14h au lundi 18 septembre</p>
+                <br>
+                <p>Faites votre demande : remplissez le formulaire ci-dessous, toute demande incomplète ne pourra être traitée.</p>
+
+                <p>Merci de ne vous inscrire qu&rsquo;une seule fois</p>
+                <p><em>En cas de forte affluence, nous ne garantissons pas de pouvoir répondre favorablement à toutes les demandes de bénévolat.</em></p>
+                <br>
+                <br>
             </div>
+            <div class="text-center">
+                <a href="../index.php?page=contact"><button class="btn btn-primary contact-btn volunteer-btn">Devenez Bénévole</button></a>
+            </div>
+
         </div>
     </div>
 {% endblock %}
