--- a/src/Hph/View/front/artist.html.twig
+++ b/src/Hph/View/front/artist.html.twig
@@ -47,18 +47,20 @@
                         <hr class="hr-small">
                         <h3 class="font-circula prog_place"><a class="white" href="{{ prog.url }}" >{{ prog.name }}</a> </h3>
                         <h4 class="font-circula prog_hour">{{ prog.concert_start | date("H:i") }} <span class="turquoise bold">|</span> {{ prog.concert_end | date("H:i") }}</h4>
-                    {% endfor %}
                 </div>
 
 
             </div>
             <hr class="hr">
             <div class="showcase">
-                {% if showcase ==1 %}
-                <p>SHOWCASE : {{ place.name }}</p>
-                <p>{{ prog.concert_start | date("H:i") }}</p>
+                {% if not prog.showcase ==0  %}
+                <h5 class="font-circula white text-center showcase">SHOWCASE : {{ prog.name }}</h5>
+                <h6 class="font-circula white text-center prog_hour">{{ prog.concert_start | date("H:i") }} <span class="turquoise bold">|</span> {{ prog.concert_end | date("H:i") }}
+                <hr class="hr">
                 {% else %}
                 {% endif %}
+                {% endfor %}
+
             </div>
             <div class="artiste-social text-center">
                 <a href="{{ artist.facebookUrl }}"><i class="fa fa-facebook-square social-logo" aria-hidden="true"></i></a>
@@ -97,6 +99,13 @@
                 {% for prog in progs %}
                 <h2 class="font-circula">{{ prog.concert_start | date("l, F, d") }}</h2>                                                 <h3 class="font-circula prog_place"><a class="white" href="{{ prog.url }}" >{{ prog.name }}</a></h3>
                     <h4 class="font-circula prog_hour">{{ prog.concert_start | date("H:i") }} <span class="turquoise bold">|</span> {{ prog.concert_end | date("H:i") }}</h4>
+                <div class="showcase">
+                    {% if not prog.showcase ==0  %}
+                    <hr class="hr">
+                    <h5 class="font-circula white text-center showcase">SHOWCASE : {{ prog.name }}</h5>
+                    <h6 class="font-circula white text-center prog_hour">{{ prog.concert_start | date("H:i") }} <span class="turquoise bold">|</span> {{ prog.concert_end | date("H:i") }}
+                    {% else %}
+                    {% endif %}
                 {% endfor %}
             </div>
             <hr class="hr">
