--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -96,7 +96,7 @@
         </div>
     </div>
     <div class="footer-bottom text-center visible-xs">
-        <i class="fa fa-facebook-square social-logo" aria-hidden="true"></i>
+        <a href="https://fr-fr.facebook.com/hoppophop/"><i class="fa fa-facebook-square social-logo" aria-hidden="true"></i></a>
         <i class="fa fa-twitter-square social-logo" aria-hidden="true"></i>
         <i class="fa fa-instagram social-logo" aria-hidden="true"></i>
         <i class="fa fa-spotify social-logo" aria-hidden="true"></i>
