--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="benevolat-div ">
-                <h1>VOUS SOUHAITEZ AIDER À LA MISE EN PLACE DU FESTIVAL?</h1>
+                <h1 class="text-center">VOUS SOUHAITEZ AIDER À LA MISE EN PLACE DU FESTIVAL?</h1>
                 <br>
                 <br>
                 <br>
